fixed issue with ps --gpu-used not listing assigned GPUs anymore
"HostConfig" seems to have disappeared from newer docker's inspect,
making it hard to acquire knowledge about which devices have been mapped
into the container :-/. Decided not to rely on this anymore but instead
just save the info we have from NV_GPU anyhow into a USERDOCKER_NV_GPU
container env var for later querying.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -25,6 +25,9 @@ Bug fixes:
 
 - Removed allow_abbrev to allow flag combinations, #3
 - Fixed parsing dups bug in ARGS_AVAILABLE and ARGS_ALWAYS, #4
+- GPU assignment is now saved in USERDOCKER_NV_GPU container env var  for later
+  use as docker's inspect was less stable than expected ("HostConfig" seems to
+  have disappeared)
 
 
 
